tests/ui/async-await/issue-67252-unnamed-future.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-67252-unnamed-future.rs:18:5
   |
LL | /     spawn(async {
LL | |         let a = std::ptr::null_mut::<()>(); // `*mut ()` is not `Send`
LL | |         AFuture.await;
LL | |         let _a = a;
LL | |     });
   | |______^ future created by async block is not `Send`
   |
   = help: within `{async block@$DIR/issue-67252-unnamed-future.rs:18:11: 18:16}`, the trait `Send` is not implemented for `*mut ()`
note: future is not `Send` as this value is used across an await
  --> $DIR/issue-67252-unnamed-future.rs:20:17
   |
LL |         let a = std::ptr::null_mut::<()>(); // `*mut ()` is not `Send`
   |             - has type `*mut ()` which is not `Send`
LL |         AFuture.await;
   |                 ^^^^^ await occurs here, with `a` maybe used later
note: required by a bound in `spawn`
  --> $DIR/issue-67252-unnamed-future.rs:6:13
   |
LL | fn spawn<T: Send>(_: T) {}
   |             ^^^^ required by this bound in `spawn`

error: aborting due to 1 previous error

